Init commit of all in-progress projects

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
-*.
+template-pages-list.php
+
+# OS generated files #
+######################
+.gitignore
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
