--- a/package.json
+++ b/package.json
@@ -3,7 +3,13 @@
   "version": "1.0.0",
   "devDependencies": {
     "grunt": "~0.4.2",
-    "grunt-contrib-sass": "~0.7.2"
+    "grunt-contrib-sass": "~0.7.2",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-autoprefixer": "~0.6.5",
+    "grunt-contrib-jshint": "~0.8.0",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-uglify": "~0.3.2",
+    "grunt-contrib-cssmin": "~0.7.0"
   },
   "dependencies": {
     "load-grunt-tasks": "~0.2.0"
